force-app/main/default/objects/CONMAN_Contract_Verbiage__c/CONMAN_Contract_Verbiage__c.object-meta.xml
<CustomObject>
    <description>Terms and Conditions are are specific to a PGi Contract and can be edited by Legal.</description>
    <label>PGi Contract Verbiage</label>
    <nameField>
        <label>PGi Contract Verbiage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGi Contract Verbiage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>