force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Has the modified Verbiage been Approved by Legal?</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>