force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Contract_General_Content__c.field-meta.xml
<CustomField>
    <fullName>Contract_General_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contract General Content that this Verbiage originated from.</inlineHelpText>
    <label>Contract General Content</label>
    <referenceTo>PGIServicesInformation__c</referenceTo>
    <relationshipLabel>PGi Contract Verbiage</relationshipLabel>
    <relationshipName>PGi_Contract_Verbiage</relationshipName>
    <type>Lookup</type>
</CustomField>