force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Contract_Product_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product_Verbiage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contract Product Verbiage that this Verbiage originated from.</inlineHelpText>
    <label>Contract Product Verbiage</label>
    <referenceTo>Contract_Terms__c</referenceTo>
    <relationshipLabel>PGi Contract Verbiage</relationshipLabel>
    <relationshipName>PGi_Contract_Verbiage</relationshipName>
    <type>Lookup</type>
</CustomField>