force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Modified__c.field-meta.xml
<CustomField>
    <fullName>Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Verbiage been changed from the originating verbiage?</inlineHelpText>
    <label>Modified</label>
    <type>Checkbox</type>
</CustomField>