force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/PGi_Contract__c.field-meta.xml
<CustomField>
    <fullName>PGi_Contract__c</fullName>
    <inlineHelpText>Which PGi Contract is this Verbiage for?</inlineHelpText>
    <label>PGi Contract</label>
    <referenceTo>CONMAN_Contract__c</referenceTo>
    <relationshipLabel>PGi Contract Verbiage</relationshipLabel>
    <relationshipName>PGi_Contract_Verbiage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>