force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Pricing_Team_Changes_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Team_Changes_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the Deal Desk can edit this Verbiage. Legal can edit all Verbiage.</description>
    <inlineHelpText>Whether or not the Deal Desk can edit this Verbiage. Legal can edit all Verbiage.</inlineHelpText>
    <label>Pricing Team Changes Allowed</label>
    <type>Checkbox</type>
</CustomField>