force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Show_Verbiage_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Verbiage_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to decide whether to display the Header or not for the verbiage.</description>
    <inlineHelpText>Field used to decide whether to display the Header or not for the verbiage.</inlineHelpText>
    <label>Show Verbiage Header</label>
    <type>Checkbox</type>
</CustomField>