force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Verbiage__c</fullName>
    <inlineHelpText>The Verbiage that should appear on the PGi Contract</inlineHelpText>
    <label>Verbiage</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>