force-app/main/default/objects/CONMAN_Contract_Verbiage__c/fields/Verbiage_Header__c.field-meta.xml
<CustomField>
    <fullName>Verbiage_Header__c</fullName>
    <description>Header for the Contract Verbiage</description>
    <inlineHelpText>Header for the Contract Verbiage</inlineHelpText>
    <label>Verbiage Header</label>
    <type>TextArea</type>
</CustomField>