force-app/main/default/objects/CONMAN_Contract_Verbiage__c/validationRules/PGI_Pricing_Team_Changes_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>PGI_Pricing_Team_Changes_Allowed</fullName>
    <active>false</active>
    <description>If the Pricing_Team_Changes_Allowed__c is &quot;True&quot; changes are allowed by the PGi Contract Manager profile.</description>
    <errorConditionFormula>AND( 
$Profile.Id &lt;&gt; &quot;00e13000001x8nV&quot;, 
$Profile.Id &lt;&gt; &quot;00e1300000225Kw&quot;, 
$Profile.Id &lt;&gt; &quot;00e30000001kms9&quot;, 
$User.Override_Validation_Rules__c = FALSE, 
Pricing_Team_Changes_Allowed__c = FALSE 
)</errorConditionFormula>
    <errorMessage>You are not allowed to make these updates. Please contact the Legal Team.</errorMessage>
</ValidationRule>